consul config tests are now passing